# marvel_kata_rust

./: .gitignore  Cargo.toml
src/: main.rs
src/comics/: mod.rs  model.rs  repository.rs  service.rs
src/marvel/: client.rs  mod.rs
tests/: lib.rs
tests/comics/: comics.rs
tests/marvel/: client.rs
